Fix font, alignment, and copyright mark

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -27,7 +27,7 @@ a{
 p{
   align-items: center;
 }
-.copyright{
+h4.copyright{
   color: gray;
   text-align: right;
 }
